Fix refresh button animation on mobile

--- a/client/src/styles/_utils.scss
+++ b/client/src/styles/_utils.scss
@@ -1,3 +1,12 @@
+@-webkit-keyframes rotate {
+  0% {
+    transform: rotateX(0);
+  }
+  100% {
+    
+    transform: rotatex(90);
+  }
+}
 @keyframes rotate {
   0% {
     transform: rotateX(0);
@@ -68,8 +77,18 @@
   }
   &.btn-rotate {
     transform: rotate(180deg);
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    transform: rotate(180deg);
   }
   &.btn-rotate:active {
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
     transform: rotate(0deg);
     transition:  0s;
   }
